force-app/main/default/objects/Course_Enrollment__c/Course_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Course Enrollment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Course Enrollment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrollment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>