force-app/main/default/objects/Course_Enrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Enrolled Employees</relationshipLabel>
    <relationshipName>Course_Enrollment</relationshipName>
    <type>Lookup</type>
</CustomField>