force-app/main/default/objects/Course_Enrollment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Course Enrollment</relationshipLabel>
    <relationshipName>Course_Enrollment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>