force-app/main/default/objects/Course_Enrollment__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Course_Session__c</referenceTo>
    <relationshipLabel>Enrolled Employees</relationshipLabel>
    <relationshipName>Enrolled_Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>